[project]
name = "diffuser-implements"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers[torch]>=0.35.2",
    "safetensors>=0.7.0",
    "sentencepiece>=0.2.1",
    "transformers>=4.57.1",
]
